--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
+    "axios": "^1.13.2",
     "chalk": "^5.6.2",
     "discord.js": "^14.24.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "i": "^0.3.7"
+    "@types/node": "^24.10.0",
+    "i": "^0.3.7",
+    "typescript": "^5.9.3"
   }
 }
