Added working issue creator

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DISCORD_TOKEN=""
 MODULES_BASE_PATH="./"
 CLIENT_ID=""
 GUILD_ID="""
+FEEDBACK_CHANNEL=""
+BUG_REPORT_CHANNEL=""
+DEVELOPER_ROLE=""
+GITHUB_TOKEN=""
