--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@octokit/rest": "^22.0.1",
+    "@prisma/client": "^6.19.0",
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
     "discord.js": "^14.24.2",
